--- a/css/blog.css
+++ b/css/blog.css
@@ -1,11 +1,11 @@
 .snide {
-  font-size: 16em;
+  font-size: 130%;
   text-align: center;
   margin-top: 6.66%;
 }
 
 .snidesub {
-  font-size: 8em;
+  font-size: 115%;
   text-align: center;
 }
 
